--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
       <div id="console"></div>
     </div>
 
-    <script src="./script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
